--- a/firstAppPOO/Base.lproj/Main.storyboard
+++ b/firstAppPOO/Base.lproj/Main.storyboard
@@ -60,6 +60,14 @@
                                     <action selector="crearObjeto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dON-M4-TzS"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzh-LU-mMP">
+                                <rect key="frame" x="34" y="372" width="114" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Recargar Bateria"/>
+                                <connections>
+                                    <action selector="recargar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xOE-SS-8J9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
